# BIDSHub

./: .dockerignore  .env.example  .gitignore  .zenodo.json  BIDS_EEG_PLAN.md  CHANGELOG.md  CHANGES_APPLIED.md  CITATION.cff  CODE_OF_CONDUCT.md  CONNECTION_FLOW.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.md  DOWNLOAD_UPLOAD_MANAGER_COMPLETION.md  DUAL_PLATFORM_GUIDE.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  METADATA_FILTERING_GUIDE.md  MULTI_DATASET_GUIDE.md  MULTI_DATASET_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS.md  PROGRESS.md  PROJECT_SCOPE.md  QUICKSTART.md  README.md  RELEASING.md  SECURITY.md  TESTING_GUIDE.md  TESTING_REPORT_V15_ENHANCEMENTS.md  TESTS_COMPLETE.txt  TEST_REPORT.md  TEST_RESULTS.md  TEST_SUMMARY.md  TROUBLESHOOTING.md  UI_UX_TEST_RESULTS.md  USER_GUIDE.md  UX.md  (+24 more)
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
data/: bidshub.db.backup_20260304_144919  bidshub.db.backup_20260304_154208  bidshub.db.backup_20260304_161414  bidshub.db.backup_20260304_165153  bidshub.db.backup_20260304_173958  bidshub.db.backup_fk_fix_20260304_170447
desktop/: __init__.py  app.py  bootstrap.py  migrations.py  updates.py
docs/: NATIVE_PRODUCTION.md  PRODUCTION_GO_LIVE.md  PRODUCTION_ROADMAP.md  RELEASE_POLICY.md  SETUP.md
packaging/: README.md  bidshub.spec  build.sh  entitlements.plist  make_appimage.sh  make_dmg.sh  make_icons.py  sign_macos.sh  smoke_test.py  smoke_test_window.py  windows_installer.iss
scripts/: __init__.py  add_sample_datasets.py  (+11 more)
(+91 files in other folders)
